--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,8 +1,3 @@
-<?php
-require_once __DIR__ . '/../Backend/config/paths.php';
-include DESIGN_PATH . '/navbar.php';
-?>
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -12,15 +7,19 @@ include DESIGN_PATH . '/navbar.php';
     <title>Blattwerk – Dein Pflanzen-Webshop</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/test.js"></script>
+    <script defer src="js/layout.js"></script>
 </head>
-<body>
-    
-    <main>
-        <section class="hero">
-            <h2>Willkommen bei Blattwerk</h2>
-            <p>Finde deine perfekte Zimmerpflanze – nachhaltig, schön und direkt zu dir geliefert.</p>
-            <a href="sites/products.php" class="btn">Jetzt entdecken</a>
-        </section>
+    <body>
+        <div id="navbar-placeholder"></div>
+        <main class="container py-5">
+            <section class="hero">
+                <h2>Willkommen bei Blattwerk</h2>
+                <p>Finde deine perfekte Zimmerpflanze – nachhaltig, schön und direkt zu dir geliefert.</p>
+                <a href="sites/products.html" class="btn">Jetzt entdecken</a>
+            </section>
         </main>
+        <div id="footer-placeholder"></div>
+    </body>
+</html>
 
-        <?php include DESIGN_PATH . '/footer.php'; ?>
+
