--- a/Frontend/sites/cart.html
+++ b/Frontend/sites/cart.html
@@ -1,7 +1,4 @@
-<?php
-require_once __DIR__ . '/../../Backend/config/paths.php';
-include DESIGN_PATH . '/navbar.php';
-?>
+
 
 <!DOCTYPE html>
 <html lang="de">
@@ -10,8 +7,21 @@ include DESIGN_PATH . '/navbar.php';
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Blattwerk – Dein Pflanzen-Webshop</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/test.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+
+    <script defer src="../js/test.js"></script>
+    <script defer src="../js/layout.js"></script>
+
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
+
+    <main class="container py-5">
+        <div id="cart-items"></div>
+        <div><strong>Gesamtpreis:</strong> <span id="cart-total">/span></div>
+    </main>
+
+    <div id="footer-placeholder"></div>
+</body>
+</html>
     
