--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Blattwerk – Dein Pflanzen-Webshop</title>
-    <link rel="stylesheet" href="/../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script defer src="js/test.js"></script>
     <script defer src="js/layout.js"></script>
 </head>
-<<<<<<< HEAD:Frontend/index.html
     <body>
         <div id="navbar-placeholder"></div>
         <main class="container py-5">
             <section class="hero">
                 <h2>Willkommen bei Blattwerk</h2>
                 <p>Finde deine perfekte Zimmerpflanze – nachhaltig, schön und direkt zu dir geliefert.</p>
-                <a href="sites/products.html" class="btn">Jetzt entdecken</a>
+                <a href="sites/products.html" class="btn">Jetzt entdecken!</a>
             </section>
         </main>
         <div id="footer-placeholder"></div>
@@ -24,16 +23,3 @@
 </html>
 
 
-=======
-<body>
-
-<main>
-    <section class="hero text-center p-5 bg-success text-white">
-        <h2>Willkommen bei Blattwerk</h2>
-        <p>Finde deine perfekte Zimmerpflanze – nachhaltig, schön und direkt zu dir geliefert.</p>
-        <a href="sites/products.php" class="btn btn-light mt-3">Jetzt entdecken</a>
-    </section>
-</main>
-
-<?php include DESIGN_PATH . '/footer.php'; ?>
->>>>>>> b831f7b9287ba1257985ad518d1a1ead76848ab8:Frontend/index.php
