Navbar gefixed, Login gefixed, Warenkorb gefixed, Produktsuche hinzugefügt

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,8 +7,9 @@
     <title>Blattwerk – Dein Pflanzen-Webshop</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/test.js"></script>
-    <script defer src="js/layout.js"></script>
-</head>
+    <script defer src="js/cart.js"></script>
+    <script defer src="js/layout.js?v=1000"></script>
+    </head>
     <body>
         <div id="navbar-placeholder"></div>
         <main class="container py-5">
