--- a/Frontend/sites/products.html
+++ b/Frontend/sites/products.html
@@ -13,6 +13,7 @@
 
     <!-- JS -->
     <script defer src="../js/test.js"></script>
+    <script defer src="../js/cart.js"></script>
     <script defer src="../js/layout.js"></script>
 
 </head>
@@ -30,11 +31,11 @@
         </div>
         <div id="product-list" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
             <!-- Hier werden Produkte eingefügt -->
-
-            <!-- Produkt 1 -->
+            
+            <!-- Produkte -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="../../Backend/productpictures/aloe.jpeg" class="card-img-top" alt="Aloe Vera">
+                    <img src="/Blattwerk/Blattwerk-/Backend/productpictures/aloe.jpg" class="card-img-top" alt="Aloe Vera">
                     <div class="card-body">
                         <h5 class="card-title">Aloe Vera</h5>
                         <p class="card-text">Pflegeleicht, schön und perfekt für Anfänger.</p>
@@ -43,11 +44,9 @@
                 </div>
             </div>
 
-            <!-- Produkt 2 -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="../../Backend/productpictures/monstera.jpg" class="card-img-top" alt="Monstera">
-                    <div class="card-body">
+                    <img src="/Blattwerk/Blattwerk-/Backend/productpictures/monstera.jpg" class="card-img-top" alt="Monstera">                    <div class="card-body">
                         <h5 class="card-title">Monstera</h5>
                         <p class="card-text">Stylische Zimmerpflanze mit einzigartigen Blättern.</p>
                         <p class="text-success fw-bold">14,99 €</p>
@@ -55,10 +54,9 @@
                 </div>
             </div>
 
-            <!-- Produkt 3 -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="../../Backend/productpictures/kaktus.jpg" class="card-img-top" alt="Kaktus">
+                    <img src="/Blattwerk/Blattwerk-/Backend/productpictures/kaktus.jpg" class="card-img-top" alt="Kaktus">
                     <div class="card-body">
                         <h5 class="card-title">Kaktus</h5>
                         <p class="card-text">Kommt mit wenig Wasser aus und ist super robust.</p>
@@ -67,10 +65,9 @@
                 </div>
             </div>
 
-            <!-- Produkt 4 -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="../../Backend/productpictures/basilikum.jpg" class="card-img-top" alt="Basilikum">
+                    <img src="/Blattwerk/Blattwerk-/Backend/productpictures/basilikum.jpg" class="card-img-top" alt="Basilikum">
                     <div class="card-body">
                         <h5 class="card-title">Basilikum</h5>
                         <p class="card-text">Frisch, lecker und perfekt für deine Küche.</p>
