--- a/Frontend/sites/register.html
+++ b/Frontend/sites/register.html
@@ -16,6 +16,7 @@
   <!-- Skripte für Navbar/Footer und eigene Logik -->
   <script defer src="../js/test.js"></script>
   <script defer src="../js/layout.js"></script>
+  <script defer src="../js/cart.js"></script>
   <!-- Ausgelagertes Script für die Registrierung -->
   <script defer src="../js/register.js"></script>
 </head>
