--- a/Frontend/sites/cart.html
+++ b/Frontend/sites/cart.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <script defer src="../js/test.js"></script>
+    <script defer src="../js/cart.js"></script>
     <script defer src="../js/layout.js"></script>
 
 </head>
