--- a/Frontend/sites/login.html
+++ b/Frontend/sites/login.html
@@ -14,6 +14,7 @@
   <!-- Skripte -->
   <script defer src="../js/test.js"></script>
   <script defer src="../js/layout.js"></script>
+  <script defer src="../js/cart.js"></script>
   <script defer src="../js/login.js"></script>
 </head>
 <body>
