--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/test.js"></script>
     <script defer src="js/cart.js"></script>
-    <script defer src="js/layout.js?v=1000"></script>
+    <script defer src="js/layout.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <div id="navbar-placeholder"></div>
