--- a/Frontend/sites/login.html
+++ b/Frontend/sites/login.html
@@ -16,6 +16,7 @@
   <script defer src="../js/layout.js"></script>
   <script defer src="../js/cart.js"></script>
   <script defer src="../js/login.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div id="navbar-placeholder"></div>
