--- a/Frontend/sites/products.html
+++ b/Frontend/sites/products.html
@@ -16,6 +16,8 @@
     <script defer src="../js/cart.js"></script>
     <script defer src="../js/layout.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -30,7 +32,6 @@
             <input type="text" id="product-search" class="form-control" placeholder="Produkte suchen...">
         </div>
         <div id="product-list" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-            <!-- Hier werden Produkte eingefügt -->
             
             <!-- Produkte -->
             <div class="col">
