--- a/Frontend/sites/register.html
+++ b/Frontend/sites/register.html
@@ -13,12 +13,11 @@
   <!-- Eigene Styles -->
   <link rel="stylesheet" href="../css/style.css">
   
-  <!-- Skripte für Navbar/Footer und eigene Logik -->
   <script defer src="../js/test.js"></script>
   <script defer src="../js/layout.js"></script>
   <script defer src="../js/cart.js"></script>
-  <!-- Ausgelagertes Script für die Registrierung -->
   <script defer src="../js/register.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div id="navbar-placeholder"></div>
