--- a/Frontend/sites/register.html
+++ b/Frontend/sites/register.html
@@ -51,7 +51,7 @@
       </div>
       <div class="mb-3">
         <label for="postalCode" class="form-label">PLZ <span class="text-danger">*</span></label>
-        <input type="text" id="postalCode" name="postalCode" class="form-control" pattern="\d{4}" title="Bitte fünfstellige PLZ eingeben" required>
+        <input type="text" id="postalCode" name="postalCode" class="form-control" pattern="\d{4}" title="Bitte vierstellige PLZ eingeben" required>
       </div>
       <div class="mb-3">
         <label for="city" class="form-label">Ort <span class="text-danger">*</span></label>
