--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,6 +9,8 @@
     <script defer src="js/test.js"></script>
     <script defer src="js/cart.js"></script>
     <script defer src="js/layout.js"></script>
+    <script defer src="js/orders.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
