--- a/Frontend/sites/register.html
+++ b/Frontend/sites/register.html
@@ -17,6 +17,7 @@
   <script defer src="../js/layout.js"></script>
   <script defer src="../js/cart.js"></script>
   <script defer src="../js/register.js"></script>
+  <script defer src="../js/orders.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
