--- a/Frontend/sites/cart.html
+++ b/Frontend/sites/cart.html
@@ -36,7 +36,7 @@
             </table>
             <p class="text-end mt-4"><strong>Gesamtpreis: <span id="cart-total">0.00 €</span></strong></p>
             <div class="text-end mt-4">
-                <button id="order-button" class="btn btn-success">Jetzt bestellen</button>
+                <button id="order-button" class="btn btn-success" class="btn disabled" disabled>Jetzt bestellen</button>
             </div>
           </div>
           <div id="payment-section" class="mt-4">
