Added explaining comments

--- a/Frontend/sites/account.html
+++ b/Frontend/sites/account.html
@@ -76,7 +76,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // 1) Session-Daten vom Server holen (inkl. payment_info)
+      // Session-Daten vom Server holen (inkl. payment_info)
       fetch("../../Backend/logic/requestHandler.php?action=getSessionInfo", {
         credentials: "include"
       })
