--- a/Frontend/sites/login.html
+++ b/Frontend/sites/login.html
@@ -11,7 +11,7 @@
   <title>Blattwerk – Login</title>
   <link rel="stylesheet" href="../css/style.css">
 
-  <!-- Skripte -->
+  <!-- Skripte einbinden -->
   <script defer src="../js/test.js"></script>
   <script defer src="../js/layout.js"></script>
   <script defer src="../js/cart.js"></script>
