--- a/Frontend/sites/admin.html
+++ b/Frontend/sites/admin.html
@@ -132,7 +132,7 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Gutscheine werden hier eingefügt -->
+          <!-- Gutscheine dynamisch eingefügt -->
           </tbody>
         </table>
       </section>
