--- a/Frontend/sites/products.html
+++ b/Frontend/sites/products.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produkte – Blattwerk</title>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap einbinden -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Dein Style -->
+    <!-- CSS einbinden -->
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- JS -->
