--- a/Frontend/sites/register.html
+++ b/Frontend/sites/register.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CSS ohne Integrity-Attribut -->
+  <!-- Bootstrap einbinden -->
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet"
     crossorigin="anonymous"
   >
   <title>Blattwerk – Registrieren</title>
-  <!-- Eigene Styles -->
+  <!-- CSS einbinden -->
   <link rel="stylesheet" href="../css/style.css">
   
   <script defer src="../js/test.js"></script>
